fixed some small layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,10 @@ body
 	background-color : #000000;
 }
 
+a, a:visited, a:hover
+{
+	color : #FFFFFF;
+}
 
 .TwitterFollowerLink
 {
